@@ -47,7 +47,7 @@ before_install:
    - perl -V
 
 install:
-   - yes '' | cpanm --verbose --notest --skip-satisfied Config::File File::BaseDir File::Rsync File::Touch File::Which Moo Test::Differences Test::File String::Random String::Expand File::Slurper
+   - yes '' | cpanm --verbose --notest --skip-satisfied Config::File File::BaseDir File::Rsync File::Touch File::Which Moo Test::Differences Test::File Test::Perl::Critic String::Random String::Expand File::Slurper
    - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1 PATH=${PERLBREW_PATH}:${PATH}
 
 script:
